--- a/requirements.txt
+++ b/requirements.txt
@@ -1,163 +1,19 @@
-affine==2.3.1
-alabaster==0.7.12
-anyio==3.6.1
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.5.2
-attrs==22.1.0
-autodoc-pydantic==1.6.1
-Babel==2.10.3
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-cffi==1.15.1
-cftime==1.6.1
-charset-normalizer==2.1.0
-click==8.1.3
-click-plugins==1.1.1
-cligj==0.7.2
-codecov==2.1.12
-coverage==6.4.3
-cycler==0.11.0
-Cython==0.29.32
-debugpy==1.6.2
-decorator==5.1.1
-defusedxml==0.7.1
-docutils==0.17.1
-dotted-dict==1.1.3
-ecdsa==0.18.0
--e git+ssh://git@github.com/felixarjuna/EnSysMod.git@9aba17f7f9b9c6a6c7e3750c9d177544e09a0004#egg=ensysmod
-entrypoints==0.4
-et-xmlfile==1.1.0
+# Requirements for EnSysMod
+
 fastapi==0.74.1
-fastjsonschema==2.16.1
--e git+ssh://git@github.com/felixarjuna/EnSysMod.git@9aba17f7f9b9c6a6c7e3750c9d177544e09a0004#egg=FINE&subdirectory=Lib/FINE
-Fiona==1.8.21
-flake8==3.9.2
-fonttools==4.34.4
-future==0.18.2
-geopandas==0.10.2
-GPy==1.10.0
-GPyOpt==1.2.6
-greenlet==1.1.2
-h11==0.13.0
-idna==3.3
-imagesize==1.4.1
-importlib-metadata==4.12.0
-importlib-resources==5.9.0
-iniconfig==1.1.1
-ipyfilechooser==0.6.0
-ipykernel==6.15.1
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-jsonschema==4.9.1
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-kiwisolver==1.4.4
-m2r==0.2.1
-MarkupSafe==2.1.0
-matplotlib==3.5.2
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-mime==0.1.0
-mistune==0.8.4
-munch==2.5.0
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-netCDF4==1.6.0
-networkx==2.6.3
-notebook==6.4.12
-numpy==1.21.5
-openpyxl==3.0.9
-packaging==21.3
-pandas==1.3.5
-pandocfilters==1.5.0
-paramz==0.9.5
-parso==0.8.3
-passlib==1.7.4
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pkgutil_resolve_name==1.3.10
-pluggy==1.0.0
-ply==3.11
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-psutil==5.9.1
-ptyprocess==0.7.0
-pwlf==2.2.1
-py==1.11.0
-pyasn1==0.4.8
-pycodestyle==2.7.0
-pycparser==2.21
-pydantic==1.9.0
-pyDOE==0.3.8
-pyflakes==2.3.1
-Pygments==2.12.0
-Pyomo==6.4.1
-pyparsing==3.0.9
-pyproj==3.2.1
-pyrsistent==0.18.1
-pytest==7.0.1
-pytest-cov==3.0.0
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-python-jose==3.3.0
-python-multipart==0.0.5
-pytz==2022.1
-PyYAML==6.0
-pyzmq==23.2.0
-rasterio==1.2.10
-requests==2.28.1
-requests-toolbelt==0.9.1
-rsa==4.9
-scikit-learn==1.0.2
-scipy==1.7.3
-seaborn==0.11.2
-Send2Trash==1.8.0
-Shapely==1.8.2
-simplejson==3.17.6
-six==1.16.0
-sniffio==1.2.0
-snowballstemmer==2.2.0
-snuggs==1.4.7
-soupsieve==2.3.2.post1
-Sphinx==4.4.0
-sphinx-rtd-theme==1.0.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-httpdomain==1.8.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-openapi==0.7.0
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-SQLAlchemy==1.4.31
-starlette==0.17.1
-terminado==0.15.0
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-tomli==2.0.1
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.3.0
-tsam==2.1.0
-typing_extensions==4.3.0
-urllib3==1.26.11
+sqlalchemy==1.4.31
 uvicorn==0.17.5
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.6.1
-xarray==0.20.2
-xlrd==2.0.1
-zipp==3.8.1
+pydantic==1.9.0
+pydantic[dotenv]
+
+python-jose==3.3.0
+passlib==1.7.4
+python-multipart==0.0.5
+bcrypt==3.2.0
+
+simplejson~=3.17.6
+numpy==1.21.5
+pandas==1.3.5
+openpyxl==3.0.9
+
+FINE @ git+https://github.com/felixarjuna/EnSysMod.git#&subdirectory=Lib/FINE
